// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RestaurantPage Component should renders ProductPage component 1`] = `
<DocumentFragment>
  <section
    class="MuiContainer-root MuiContainer-maxWidthLg css-9jxf5d-MuiContainer-root"
  >
    <h2
      class="MuiTypography-root MuiTypography-h2 css-1usz6bn-MuiTypography-root"
    >
      All Restaurants
    </h2>
    <a
      href="/restaurants/pzzaday/321"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-sgnsag-MuiPaper-root-MuiCard-root"
      >
        <div
          class="MuiBox-root css-gpemya"
        >
          <img
            alt="PzzaDay"
            class="MuiCardMedia-root MuiCardMedia-media MuiCardMedia-img css-fh02g9-MuiCardMedia-root"
            src="image1.jpg"
          />
        </div>
        <div
          class="MuiStack-root css-rwxpvi-MuiStack-root"
        >
          <div
            class="MuiCardHeader-root css-4mdd9q-MuiCardHeader-root"
          >
            <div
              class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
            >
              <h3
                class="MuiTypography-root MuiTypography-h3 css-xz6qnp-MuiTypography-root"
              >
                PzzaDay
              </h3>
            </div>
          </div>
          <div
            class="MuiCardContent-root css-oq62jt-MuiCardContent-root"
          >
            <div
              class="MuiBox-root css-0"
            >
              <span
                aria-label="5 Stars"
                class="MuiRating-root MuiRating-sizeSmall Mui-readOnly MuiRating-readOnly css-1nmdjm5-MuiRating-root"
                role="img"
              >
                <span>
                  <span
                    class="MuiRating-icon MuiRating-iconFilled css-7qmtgc-MuiRating-icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeMedium css-ci5apu-MuiSvgIcon-root"
                      data-testid="StarRateRoundedIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="m14.43 10-1.47-4.84c-.29-.95-1.63-.95-1.91 0L9.57 10H5.12c-.97 0-1.37 1.25-.58 1.81l3.64 2.6-1.43 4.61c-.29.93.79 1.68 1.56 1.09l3.69-2.8 3.69 2.81c.77.59 1.85-.16 1.56-1.09l-1.43-4.61 3.64-2.6c.79-.57.39-1.81-.58-1.81h-4.45z"
                      />
                    </svg>
                  </span>
                </span>
                <span>
                  <span
                    class="MuiRating-icon MuiRating-iconFilled css-7qmtgc-MuiRating-icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeMedium css-ci5apu-MuiSvgIcon-root"
                      data-testid="StarRateRoundedIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="m14.43 10-1.47-4.84c-.29-.95-1.63-.95-1.91 0L9.57 10H5.12c-.97 0-1.37 1.25-.58 1.81l3.64 2.6-1.43 4.61c-.29.93.79 1.68 1.56 1.09l3.69-2.8 3.69 2.81c.77.59 1.85-.16 1.56-1.09l-1.43-4.61 3.64-2.6c.79-.57.39-1.81-.58-1.81h-4.45z"
                      />
                    </svg>
                  </span>
                </span>
                <span>
                  <span
                    class="MuiRating-icon MuiRating-iconFilled css-7qmtgc-MuiRating-icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeMedium css-ci5apu-MuiSvgIcon-root"
                      data-testid="StarRateRoundedIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="m14.43 10-1.47-4.84c-.29-.95-1.63-.95-1.91 0L9.57 10H5.12c-.97 0-1.37 1.25-.58 1.81l3.64 2.6-1.43 4.61c-.29.93.79 1.68 1.56 1.09l3.69-2.8 3.69 2.81c.77.59 1.85-.16 1.56-1.09l-1.43-4.61 3.64-2.6c.79-.57.39-1.81-.58-1.81h-4.45z"
                      />
                    </svg>
                  </span>
                </span>
                <span>
                  <span
                    class="MuiRating-icon MuiRating-iconFilled css-7qmtgc-MuiRating-icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeMedium css-ci5apu-MuiSvgIcon-root"
                      data-testid="StarRateRoundedIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="m14.43 10-1.47-4.84c-.29-.95-1.63-.95-1.91 0L9.57 10H5.12c-.97 0-1.37 1.25-.58 1.81l3.64 2.6-1.43 4.61c-.29.93.79 1.68 1.56 1.09l3.69-2.8 3.69 2.81c.77.59 1.85-.16 1.56-1.09l-1.43-4.61 3.64-2.6c.79-.57.39-1.81-.58-1.81h-4.45z"
                      />
                    </svg>
                  </span>
                </span>
                <span>
                  <span
                    class="MuiRating-icon MuiRating-iconFilled css-7qmtgc-MuiRating-icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeMedium css-ci5apu-MuiSvgIcon-root"
                      data-testid="StarRateRoundedIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="m14.43 10-1.47-4.84c-.29-.95-1.63-.95-1.91 0L9.57 10H5.12c-.97 0-1.37 1.25-.58 1.81l3.64 2.6-1.43 4.61c-.29.93.79 1.68 1.56 1.09l3.69-2.8 3.69 2.81c.77.59 1.85-.16 1.56-1.09l-1.43-4.61 3.64-2.6c.79-.57.39-1.81-.58-1.81h-4.45z"
                      />
                    </svg>
                  </span>
                </span>
              </span>
            </div>
            <p
              class="MuiTypography-root MuiTypography-body1 css-w9h7d4-MuiTypography-root"
            >
              24min •
            </p>
          </div>
          <div
            class="MuiCardActions-root MuiCardActions-spacing css-mkkqzv-MuiCardActions-root"
          >
            <button
              aria-label="add to favorites"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-1n91ue6-MuiButtonBase-root-MuiIconButton-root"
              tabindex="0"
              type="button"
            >
              <svg
                fill="none"
                height="41"
                viewBox="0 0 41 41"
                width="41"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="20.3574"
                  cy="20.6406"
                  fill="#DBD9EE"
                  r="20"
                />
                <path
                  d="M24.7408 11.2928C21.8454 10.8074 18.8738 10.8074 15.9784 11.2928C14.9206 11.4701 14.0782 12.2822 13.8661 13.3351C12.8944 18.1588 12.8414 23.1226 13.7098 27.966L14.0634 29.9379C14.1724 30.5459 14.9136 30.7889 15.3615 30.3635L19.6291 26.3093C20.0384 25.9204 20.6807 25.9204 21.0901 26.3093L25.3576 30.3635C25.8055 30.7889 26.5468 30.5459 26.6558 29.9379L27.0093 27.966C27.8777 23.1226 27.8247 18.1588 26.8531 13.3351C26.641 12.2822 25.7986 11.4701 24.7408 11.2928Z"
                  fill="#6C5FBC"
                />
              </svg>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
        <div
          class="MuiStack-root css-iaetsx-MuiStack-root"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-5jihz5-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="button"
          >
            Show more
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
        </div>
        <p
          class="MuiTypography-root MuiTypography-description css-9psp93-MuiTypography-root"
        />
      </div>
    </a>
  </section>
  <div
    class="MuiContainer-root MuiContainer-maxWidthLg css-sjcq8o-MuiContainer-root"
  >
    <div
      class="MuiBox-root css-16cl7kw"
      role="listbox"
    >
      <div
        class="container"
      >
        <div
          class="productCardSkeleton"
        >
          <div
            class="productImageSkeleton loading"
          />
          <div
            class="productChipsTitleRatingSkeleton loading"
          />
          <div
            class="productChipsTitleRatingSkeleton loading"
          />
          <div
            class="productRaitingSkeleton loading"
          />
          <div
            class="productPriceSkeleton loading"
          />
        </div>
      </div>
      <div
        class="container"
      >
        <div
          class="productCardSkeleton"
        >
          <div
            class="productImageSkeleton loading"
          />
          <div
            class="productChipsTitleRatingSkeleton loading"
          />
          <div
            class="productChipsTitleRatingSkeleton loading"
          />
          <div
            class="productRaitingSkeleton loading"
          />
          <div
            class="productPriceSkeleton loading"
          />
        </div>
      </div>
      <div
        class="container"
      >
        <div
          class="productCardSkeleton"
        >
          <div
            class="productImageSkeleton loading"
          />
          <div
            class="productChipsTitleRatingSkeleton loading"
          />
          <div
            class="productChipsTitleRatingSkeleton loading"
          />
          <div
            class="productRaitingSkeleton loading"
          />
          <div
            class="productPriceSkeleton loading"
          />
        </div>
      </div>
      <div
        class="container"
      >
        <div
          class="productCardSkeleton"
        >
          <div
            class="productImageSkeleton loading"
          />
          <div
            class="productChipsTitleRatingSkeleton loading"
          />
          <div
            class="productChipsTitleRatingSkeleton loading"
          />
          <div
            class="productRaitingSkeleton loading"
          />
          <div
            class="productPriceSkeleton loading"
          />
        </div>
      </div>
      <div
        class="container"
      >
        <div
          class="productCardSkeleton"
        >
          <div
            class="productImageSkeleton loading"
          />
          <div
            class="productChipsTitleRatingSkeleton loading"
          />
          <div
            class="productChipsTitleRatingSkeleton loading"
          />
          <div
            class="productRaitingSkeleton loading"
          />
          <div
            class="productPriceSkeleton loading"
          />
        </div>
      </div>
    </div>
  </div>
  <section
    class="MuiContainer-root MuiContainer-maxWidthLg css-83rf2v-MuiContainer-root"
  >
    <h3
      class="MuiTypography-root MuiTypography-h5 css-2mz86v-MuiTypography-root"
    >
      Frequently Asked
      <br />
      Questions
    </h3>
    <ul
      class="MuiList-root MuiList-padding css-h4y409-MuiList-root"
    >
      <li
        class="MuiListItem-root MuiListItem-gutters css-uxa1ks-MuiListItem-root"
      >
        <ul
          class="MuiList-root css-1mk9mw3-MuiList-root"
        >
          <li
            class="MuiListItem-root MuiListItem-gutters css-1wxbwxm-MuiListItem-root"
          >
            <div
              class="MuiListItemText-root css-tlelie-MuiListItemText-root"
            >
              <h5
                class="MuiTypography-root MuiTypography-h3 css-krdrhq-MuiTypography-root"
              >
                How long does delivery take?
              </h5>
            </div>
            <button
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root"
              tabindex="0"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-ci5apu-MuiSvgIcon-root"
                data-testid="AddCircleIcon"
                edge="end"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
          </li>
        </ul>
        <hr
          class="MuiDivider-root MuiDivider-fullWidth css-1b008ma-MuiDivider-root"
        />
      </li>
      <li
        class="MuiListItem-root MuiListItem-gutters css-uxa1ks-MuiListItem-root"
      >
        <ul
          class="MuiList-root css-1mk9mw3-MuiList-root"
        >
          <li
            class="MuiListItem-root MuiListItem-gutters css-1wxbwxm-MuiListItem-root"
          >
            <div
              class="MuiListItemText-root css-tlelie-MuiListItemText-root"
            >
              <h5
                class="MuiTypography-root MuiTypography-h3 css-krdrhq-MuiTypography-root"
              >
                How Does It Work?
              </h5>
            </div>
            <button
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root"
              tabindex="0"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-ci5apu-MuiSvgIcon-root"
                data-testid="AddCircleIcon"
                edge="end"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
          </li>
        </ul>
        <hr
          class="MuiDivider-root MuiDivider-fullWidth css-1b008ma-MuiDivider-root"
        />
      </li>
      <li
        class="MuiListItem-root MuiListItem-gutters css-uxa1ks-MuiListItem-root"
      >
        <ul
          class="MuiList-root css-1mk9mw3-MuiList-root"
        >
          <li
            class="MuiListItem-root MuiListItem-gutters css-1wxbwxm-MuiListItem-root"
          >
            <div
              class="MuiListItemText-root css-tlelie-MuiListItemText-root"
            >
              <h5
                class="MuiTypography-root MuiTypography-h3 css-krdrhq-MuiTypography-root"
              >
                How does your food delivery service work?
              </h5>
            </div>
            <button
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root"
              tabindex="0"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-ci5apu-MuiSvgIcon-root"
                data-testid="AddCircleIcon"
                edge="end"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
          </li>
        </ul>
        <hr
          class="MuiDivider-root MuiDivider-fullWidth css-1b008ma-MuiDivider-root"
        />
      </li>
      <li
        class="MuiListItem-root MuiListItem-gutters css-uxa1ks-MuiListItem-root"
      >
        <ul
          class="MuiList-root css-1mk9mw3-MuiList-root"
        >
          <li
            class="MuiListItem-root MuiListItem-gutters css-1wxbwxm-MuiListItem-root"
          >
            <div
              class="MuiListItemText-root css-tlelie-MuiListItemText-root"
            >
              <h5
                class="MuiTypography-root MuiTypography-h3 css-krdrhq-MuiTypography-root"
              >
                What payment options do you accept?
              </h5>
            </div>
            <button
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root"
              tabindex="0"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-ci5apu-MuiSvgIcon-root"
                data-testid="AddCircleIcon"
                edge="end"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
          </li>
        </ul>
        <hr
          class="MuiDivider-root MuiDivider-fullWidth css-1b008ma-MuiDivider-root"
        />
      </li>
      <li
        class="MuiListItem-root MuiListItem-gutters css-uxa1ks-MuiListItem-root"
      >
        <ul
          class="MuiList-root css-1mk9mw3-MuiList-root"
        >
          <li
            class="MuiListItem-root MuiListItem-gutters css-1wxbwxm-MuiListItem-root"
          >
            <div
              class="MuiListItemText-root css-tlelie-MuiListItemText-root"
            >
              <h5
                class="MuiTypography-root MuiTypography-h3 css-krdrhq-MuiTypography-root"
              >
                Do you offer discounts or promotions?
              </h5>
            </div>
            <button
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root"
              tabindex="0"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-ci5apu-MuiSvgIcon-root"
                data-testid="AddCircleIcon"
                edge="end"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
          </li>
        </ul>
        <hr
          class="MuiDivider-root MuiDivider-fullWidth css-1b008ma-MuiDivider-root"
        />
      </li>
    </ul>
  </section>
</DocumentFragment>
`;

exports[`RestaurantPage Component should renders ProductPage component isLoading 1`] = `
<DocumentFragment>
  <section
    class="MuiContainer-root MuiContainer-maxWidthLg css-9jxf5d-MuiContainer-root"
  >
    <h2
      class="MuiTypography-root MuiTypography-h2 css-1usz6bn-MuiTypography-root"
    >
      All Restaurants
    </h2>
    <div
      class="container"
    >
      <div
        class="restaurantsPageCardSkeleton"
      >
        <div
          class="restaurantsPageImageSkeleton loading"
        />
        <div
          class="restaurantsPageChipsTitleRatingSkeleton loading"
        />
        <div
          class="restaurantsPageChipsTitleRatingSkeleton loading"
        />
        <div
          class="restaurantsPageShowMoreSkeleton loading"
        />
      </div>
    </div>
    <div
      class="container"
    >
      <div
        class="restaurantsPageCardSkeleton"
      >
        <div
          class="restaurantsPageImageSkeleton loading"
        />
        <div
          class="restaurantsPageChipsTitleRatingSkeleton loading"
        />
        <div
          class="restaurantsPageChipsTitleRatingSkeleton loading"
        />
        <div
          class="restaurantsPageShowMoreSkeleton loading"
        />
      </div>
    </div>
    <div
      class="container"
    >
      <div
        class="restaurantsPageCardSkeleton"
      >
        <div
          class="restaurantsPageImageSkeleton loading"
        />
        <div
          class="restaurantsPageChipsTitleRatingSkeleton loading"
        />
        <div
          class="restaurantsPageChipsTitleRatingSkeleton loading"
        />
        <div
          class="restaurantsPageShowMoreSkeleton loading"
        />
      </div>
    </div>
    <div
      class="container"
    >
      <div
        class="restaurantsPageCardSkeleton"
      >
        <div
          class="restaurantsPageImageSkeleton loading"
        />
        <div
          class="restaurantsPageChipsTitleRatingSkeleton loading"
        />
        <div
          class="restaurantsPageChipsTitleRatingSkeleton loading"
        />
        <div
          class="restaurantsPageShowMoreSkeleton loading"
        />
      </div>
    </div>
    <div
      class="container"
    >
      <div
        class="restaurantsPageCardSkeleton"
      >
        <div
          class="restaurantsPageImageSkeleton loading"
        />
        <div
          class="restaurantsPageChipsTitleRatingSkeleton loading"
        />
        <div
          class="restaurantsPageChipsTitleRatingSkeleton loading"
        />
        <div
          class="restaurantsPageShowMoreSkeleton loading"
        />
      </div>
    </div>
  </section>
  <div
    class="MuiContainer-root MuiContainer-maxWidthLg css-sjcq8o-MuiContainer-root"
  >
    <div
      class="MuiBox-root css-16cl7kw"
      role="listbox"
    >
      <div
        class="container"
      >
        <div
          class="productCardSkeleton"
        >
          <div
            class="productImageSkeleton loading"
          />
          <div
            class="productChipsTitleRatingSkeleton loading"
          />
          <div
            class="productChipsTitleRatingSkeleton loading"
          />
          <div
            class="productRaitingSkeleton loading"
          />
          <div
            class="productPriceSkeleton loading"
          />
        </div>
      </div>
      <div
        class="container"
      >
        <div
          class="productCardSkeleton"
        >
          <div
            class="productImageSkeleton loading"
          />
          <div
            class="productChipsTitleRatingSkeleton loading"
          />
          <div
            class="productChipsTitleRatingSkeleton loading"
          />
          <div
            class="productRaitingSkeleton loading"
          />
          <div
            class="productPriceSkeleton loading"
          />
        </div>
      </div>
      <div
        class="container"
      >
        <div
          class="productCardSkeleton"
        >
          <div
            class="productImageSkeleton loading"
          />
          <div
            class="productChipsTitleRatingSkeleton loading"
          />
          <div
            class="productChipsTitleRatingSkeleton loading"
          />
          <div
            class="productRaitingSkeleton loading"
          />
          <div
            class="productPriceSkeleton loading"
          />
        </div>
      </div>
      <div
        class="container"
      >
        <div
          class="productCardSkeleton"
        >
          <div
            class="productImageSkeleton loading"
          />
          <div
            class="productChipsTitleRatingSkeleton loading"
          />
          <div
            class="productChipsTitleRatingSkeleton loading"
          />
          <div
            class="productRaitingSkeleton loading"
          />
          <div
            class="productPriceSkeleton loading"
          />
        </div>
      </div>
      <div
        class="container"
      >
        <div
          class="productCardSkeleton"
        >
          <div
            class="productImageSkeleton loading"
          />
          <div
            class="productChipsTitleRatingSkeleton loading"
          />
          <div
            class="productChipsTitleRatingSkeleton loading"
          />
          <div
            class="productRaitingSkeleton loading"
          />
          <div
            class="productPriceSkeleton loading"
          />
        </div>
      </div>
    </div>
  </div>
  <section
    class="MuiContainer-root MuiContainer-maxWidthLg css-83rf2v-MuiContainer-root"
  >
    <h3
      class="MuiTypography-root MuiTypography-h5 css-2mz86v-MuiTypography-root"
    >
      Frequently Asked
      <br />
      Questions
    </h3>
    <ul
      class="MuiList-root MuiList-padding css-h4y409-MuiList-root"
    >
      <li
        class="MuiListItem-root MuiListItem-gutters css-uxa1ks-MuiListItem-root"
      >
        <ul
          class="MuiList-root css-1mk9mw3-MuiList-root"
        >
          <li
            class="MuiListItem-root MuiListItem-gutters css-1wxbwxm-MuiListItem-root"
          >
            <div
              class="MuiListItemText-root css-tlelie-MuiListItemText-root"
            >
              <h5
                class="MuiTypography-root MuiTypography-h3 css-krdrhq-MuiTypography-root"
              >
                How long does delivery take?
              </h5>
            </div>
            <button
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root"
              tabindex="0"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-ci5apu-MuiSvgIcon-root"
                data-testid="AddCircleIcon"
                edge="end"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
          </li>
        </ul>
        <hr
          class="MuiDivider-root MuiDivider-fullWidth css-1b008ma-MuiDivider-root"
        />
      </li>
      <li
        class="MuiListItem-root MuiListItem-gutters css-uxa1ks-MuiListItem-root"
      >
        <ul
          class="MuiList-root css-1mk9mw3-MuiList-root"
        >
          <li
            class="MuiListItem-root MuiListItem-gutters css-1wxbwxm-MuiListItem-root"
          >
            <div
              class="MuiListItemText-root css-tlelie-MuiListItemText-root"
            >
              <h5
                class="MuiTypography-root MuiTypography-h3 css-krdrhq-MuiTypography-root"
              >
                How Does It Work?
              </h5>
            </div>
            <button
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root"
              tabindex="0"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-ci5apu-MuiSvgIcon-root"
                data-testid="AddCircleIcon"
                edge="end"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
          </li>
        </ul>
        <hr
          class="MuiDivider-root MuiDivider-fullWidth css-1b008ma-MuiDivider-root"
        />
      </li>
      <li
        class="MuiListItem-root MuiListItem-gutters css-uxa1ks-MuiListItem-root"
      >
        <ul
          class="MuiList-root css-1mk9mw3-MuiList-root"
        >
          <li
            class="MuiListItem-root MuiListItem-gutters css-1wxbwxm-MuiListItem-root"
          >
            <div
              class="MuiListItemText-root css-tlelie-MuiListItemText-root"
            >
              <h5
                class="MuiTypography-root MuiTypography-h3 css-krdrhq-MuiTypography-root"
              >
                How does your food delivery service work?
              </h5>
            </div>
            <button
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root"
              tabindex="0"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-ci5apu-MuiSvgIcon-root"
                data-testid="AddCircleIcon"
                edge="end"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
          </li>
        </ul>
        <hr
          class="MuiDivider-root MuiDivider-fullWidth css-1b008ma-MuiDivider-root"
        />
      </li>
      <li
        class="MuiListItem-root MuiListItem-gutters css-uxa1ks-MuiListItem-root"
      >
        <ul
          class="MuiList-root css-1mk9mw3-MuiList-root"
        >
          <li
            class="MuiListItem-root MuiListItem-gutters css-1wxbwxm-MuiListItem-root"
          >
            <div
              class="MuiListItemText-root css-tlelie-MuiListItemText-root"
            >
              <h5
                class="MuiTypography-root MuiTypography-h3 css-krdrhq-MuiTypography-root"
              >
                What payment options do you accept?
              </h5>
            </div>
            <button
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root"
              tabindex="0"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-ci5apu-MuiSvgIcon-root"
                data-testid="AddCircleIcon"
                edge="end"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
          </li>
        </ul>
        <hr
          class="MuiDivider-root MuiDivider-fullWidth css-1b008ma-MuiDivider-root"
        />
      </li>
      <li
        class="MuiListItem-root MuiListItem-gutters css-uxa1ks-MuiListItem-root"
      >
        <ul
          class="MuiList-root css-1mk9mw3-MuiList-root"
        >
          <li
            class="MuiListItem-root MuiListItem-gutters css-1wxbwxm-MuiListItem-root"
          >
            <div
              class="MuiListItemText-root css-tlelie-MuiListItemText-root"
            >
              <h5
                class="MuiTypography-root MuiTypography-h3 css-krdrhq-MuiTypography-root"
              >
                Do you offer discounts or promotions?
              </h5>
            </div>
            <button
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root"
              tabindex="0"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-ci5apu-MuiSvgIcon-root"
                data-testid="AddCircleIcon"
                edge="end"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
          </li>
        </ul>
        <hr
          class="MuiDivider-root MuiDivider-fullWidth css-1b008ma-MuiDivider-root"
        />
      </li>
    </ul>
  </section>
</DocumentFragment>
`;
